GUI-1898 Fix worksheet tab alignment issue in join modal

--- a/stylesheets/less/partials/modal.less
+++ b/stylesheets/less/partials/modal.less
@@ -766,6 +766,11 @@
                 margin-right: 5px;
                 color: @color-text-darkGray;
                 white-space: nowrap;
+
+                &.active {
+                    .flex(1 0 115px);
+                    max-width: 120px;
+                }
             }
         }
 
